--- a/src1/assets/css/style.css
+++ b/src1/assets/css/style.css
@@ -206,6 +206,14 @@ span.contact1{
  
 }
 
+.fa-google{
+  background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  -webkit-text-fill-color: transparent;
+}
+
 .fab{
     font-size: 2em !important; /*size whatever you like*/
 }
