--- a/src1/assets/css/style.css
+++ b/src1/assets/css/style.css
@@ -265,6 +265,10 @@ span.contact1{
 	padding-top:20%;
 }
 
+.bumperreplace-landing-text{
+  padding-top:20%;
+}
+
 .testimonialImage{
 	width:70px; border-radius:50%; 
 	display: block;
