--- a/src1/assets/css/style.css
+++ b/src1/assets/css/style.css
@@ -9,6 +9,15 @@ body {
   height: auto;
 }
 
+
+
+.preload * {
+	-webkit-transition: none !important;
+	-moz-transition: none !important;
+	-ms-transition: none !important;
+	-o-transition: none !important;
+  }
+
 h1 {
   font-weight: 400;
   font-size: 2.5rem;
@@ -25,6 +34,9 @@ h2 {
   margin: 0;
 }
 
+h6 {
+	color: fff;
+}
 
 img {
   display: block;
@@ -34,6 +46,8 @@ img {
 main {
   max-width: 900px;
   margin: auto;
+  display: block;
+  transition: opacity 1s ease-in;
   box-shadow: 30px 0px 40px rgba(0, 0, 0, 0.3),
     -30px 0px 40px rgba(0, 0, 0, 0.3);
 }
@@ -79,7 +93,204 @@ img.imageLogo{
   animation-iteration-count: infinite;
   	 
  }
- 
+
+ @keyframes fill-images{
+	
+	0%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/271.jpg");
+		
+		
+	}
+	
+	10%{
+		background-image:url("../images/Import images/2020-04-29/car/165.jpg");
+		
+		
+	}
+	
+	20%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/267.jpg");
+		
+		
+	}
+	
+	30%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/270.jpg");
+		
+		
+	}
+	
+	40%{
+		background-image:url("../images/Import images/2020-04-29/porsche/155.jpg");
+	}
+	
+	50%{
+		background-image:url("../images/Import images/2020-04-29/Car1/089.jpg");
+		
+		
+	}
+	
+	60%{
+		background-image:url("../images/Import images/2020-04-29/car/166.jpg");
+		
+		
+	}
+	
+	70%{
+		background-image:url("../images/Import images/2020-04-29/car/159.jpg");
+		
+		
+	}
+	
+	80%{
+		background-image:url("../images/Import images/2020-04-29/M4/079.jpg");
+		
+		
+	}
+	
+	90%{
+		background-image:url("../images/Import images/2020-04-29/M4/080.jpg");
+		
+		
+	}
+	
+	
+	100%{
+		background-image:url("../images/Import images/2020-04-29/M4/081.jpg");
+	}
+}
+
+@-webkit-keyframes Animation{
+	0%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/271.jpg");
+		
+		
+	}
+	
+	10%{
+		background-image:url("../images/Import images/2020-04-29/car/165.jpg");
+		
+		
+	}
+	
+	20%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/267.jpg");
+		
+		
+	}
+	
+	30%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/270.jpg");
+		
+		
+	}
+	
+	40%{
+		background-image:url("../images/Import images/2020-04-29/porsche/155.jpg");
+	}
+	
+	50%{
+		background-image:url("../images/Import images/2020-04-29/Car1/089.jpg");
+		
+		
+	}
+	
+	60%{
+		background-image:url("../images/Import images/2020-04-29/car/166.jpg");
+		
+		
+	}
+	
+	70%{
+		background-image:url("../images/Import images/2020-04-29/car/159.jpg");
+		
+		
+	}
+	
+	80%{
+		background-image:url("../images/Import images/2020-04-29/M4/079.jpg");
+		
+		
+	}
+	
+	90%{
+		background-image:url("../images/Import images/2020-04-29/M4/080.jpg");
+		
+		
+	}
+	
+	
+	100%{
+		background-image:url("../images/Import images/2020-04-29/M4/081.jpg");
+	}
+	
+}
+/*
+@-moz-keyframes Animation {
+	0%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/271.jpg");
+		
+		
+	}
+	
+	10%{
+		background-image:url("../images/Import images/2020-04-29/car/165.jpg");
+		
+		
+	}
+	
+	20%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/267.jpg");
+		
+		
+	}
+	
+	30%{
+		background-image:url("../images/Import images/2020-04-29/lexus1/270.jpg");
+		
+		
+	}
+	
+	40%{
+		background-image:url("../images/Import images/2020-04-29/porsche/155.jpg");
+	}
+	
+	50%{
+		background-image:url("../images/Import images/2020-04-29/Car1/089.jpg");
+		
+		
+	}
+	
+	60%{
+		background-image:url("../images/Import images/2020-04-29/car/166.jpg");
+		
+		
+	}
+	
+	70%{
+		background-image:url("../images/Import images/2020-04-29/car/159.jpg");
+		
+		
+	}
+	
+	80%{
+		background-image:url("../images/Import images/2020-04-29/M4/079.jpg");
+		
+		
+	}
+	
+	90%{
+		background-image:url("../images/Import images/2020-04-29/M4/080.jpg");
+		
+		
+	}
+	
+	
+	100%{
+		background-image:url("../images/Import images/2020-04-29/M4/081.jpg");
+	}
+}
+ */
  .captionServiceHeader {
 	 
 	height:600px;
@@ -94,6 +305,10 @@ img.imageLogo{
 	transition: background-image 1s ease-in-out;
 	animation-iteration-count: infinite;
 	 
+ }
+
+ .linkService{
+	text-decoration: none; 
  }
  
  .captionBumperRepairHeader {
@@ -298,9 +513,12 @@ span.contact1{
 }
 
 .landing-text-inner{
-	padding-top:19%;
+	text-shadow: 8px 8px 6px #000;
 }
 
+.menu{
+	padding-top:11%;
+}
 
 
 .service-landing-text-inner{
@@ -331,8 +549,31 @@ span.contact1{
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.37);
 }
 
+.btnCaptionHeader{
+	
+	border: 1px #ccc solid;
+	width:80%;
+	border-radius: 12px;
+	color: #fff;
+	padding: 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	transition: background 500ms ease;
+	cursor: pointer;
+	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.37);
+
+}
+
 .btn:hover {
   background: #f4f4f4;
+}
+
+.btnCaptionHeader:hover {
+	background: #f4f4f4;
+	text-decoration: none;
 }
 
 .swiper-container {
@@ -587,7 +828,7 @@ h1.title{
  .captionHeader {
 	 
 	 
-	height:500px;
+	height:750px;
 	text-align: center; 
 	transition: background-image 1s ease-in-out;
   background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.20), rgba(0, 0, 0, 0.20)),url("../images/Import images/2020-04-29/car/166.jpg");
@@ -599,6 +840,10 @@ h1.title{
    
 	 
  }
+
+ .menu {
+    padding-top: 33%;
+}
  
  .captionBumperRepairHeader {
 	 
@@ -618,11 +863,11 @@ h1.title{
 
 .captionBumperreplacement {
    
-  height:400px;
+  height:720px;
   text-align: center;
   vertical-align: text-top;
    background-image:url("../images/Import images/2020-04-29/car/166.jpg");
-  background-repeat: no-repeat;background-size: 100% 100%;
+  background-repeat: no-repeat;background-size: cover;
   text-shadow: 8px 8px 6px #000;
   
    
@@ -696,9 +941,10 @@ h1.title{
   padding-bottom:64%;
 }
  
+/*
  .process-landing-text{
-	padding-top:15%;
- }
+	padding-top:20%;
+ }*/
  
  .service-landing-text-inner{
 	padding-bottom:64%;
@@ -794,11 +1040,7 @@ h1.title{
     font-size: 16px;
 }
 
-@media screen and(max-width: 500px){
 
-
-
-}
  
 @media screen and(max-width: 320x){
 
@@ -830,213 +1072,18 @@ h1.title{
 
 @media (max-width: 400px ){
 
-img.imageLogo{
-	width:193px; 
-	height:44px;
-}
+	img.imageLogo{
+		width:193px; 
+		height:44px;
+	}
 
-.bumper-landing-text{
-	padding-top:30%;
-}
-}
-
-
-@keyframes fill-images{
-	
-	0%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/271.jpg");
-		
-		
-	}
-	
-	10%{
-		background-image:url("../images/Import images/2020-04-29/car/165.jpg");
-		
-		
-	}
-	
-	20%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/267.jpg");
-		
-		
-	}
-	
-	30%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/270.jpg");
-		
-		
-	}
-	
-	40%{
-		background-image:url("../images/Import images/2020-04-29/porsche/155.jpg");
-	}
-	
-	50%{
-		background-image:url("../images/Import images/2020-04-29/Car1/089.jpg");
-		
-		
-	}
-	
-	60%{
-		background-image:url("../images/Import images/2020-04-29/car/166.jpg");
-		
-		
-	}
-	
-	70%{
-		background-image:url("../images/Import images/2020-04-29/car/159.jpg");
-		
-		
-	}
-	
-	80%{
-		background-image:url("../images/Import images/2020-04-29/M4/079.jpg");
-		
-		
-	}
-	
-	90%{
-		background-image:url("../images/Import images/2020-04-29/M4/080.jpg");
-		
-		
-	}
-	
-	
-	100%{
-		background-image:url("../images/Import images/2020-04-29/M4/081.jpg");
+	.bumper-landing-text{
+		padding-top:30%;
 	}
 }
 
-@-webkit-keyframes Animation{
-	0%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/271.jpg");
-		
-		
-	}
-	
-	10%{
-		background-image:url("../images/Import images/2020-04-29/car/165.jpg");
-		
-		
-	}
-	
-	20%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/267.jpg");
-		
-		
-	}
-	
-	30%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/270.jpg");
-		
-		
-	}
-	
-	40%{
-		background-image:url("../images/Import images/2020-04-29/porsche/155.jpg");
-	}
-	
-	50%{
-		background-image:url("../images/Import images/2020-04-29/Car1/089.jpg");
-		
-		
-	}
-	
-	60%{
-		background-image:url("../images/Import images/2020-04-29/car/166.jpg");
-		
-		
-	}
-	
-	70%{
-		background-image:url("../images/Import images/2020-04-29/car/159.jpg");
-		
-		
-	}
-	
-	80%{
-		background-image:url("../images/Import images/2020-04-29/M4/079.jpg");
-		
-		
-	}
-	
-	90%{
-		background-image:url("../images/Import images/2020-04-29/M4/080.jpg");
-		
-		
-	}
-	
-	
-	100%{
-		background-image:url("../images/Import images/2020-04-29/M4/081.jpg");
-	}
-	
-}
 
-@-moz-keyframes Animation {
-	0%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/271.jpg");
-		
-		
-	}
-	
-	10%{
-		background-image:url("../images/Import images/2020-04-29/car/165.jpg");
-		
-		
-	}
-	
-	20%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/267.jpg");
-		
-		
-	}
-	
-	30%{
-		background-image:url("../images/Import images/2020-04-29/lexus1/270.jpg");
-		
-		
-	}
-	
-	40%{
-		background-image:url("../images/Import images/2020-04-29/porsche/155.jpg");
-	}
-	
-	50%{
-		background-image:url("../images/Import images/2020-04-29/Car1/089.jpg");
-		
-		
-	}
-	
-	60%{
-		background-image:url("../images/Import images/2020-04-29/car/166.jpg");
-		
-		
-	}
-	
-	70%{
-		background-image:url("../images/Import images/2020-04-29/car/159.jpg");
-		
-		
-	}
-	
-	80%{
-		background-image:url("../images/Import images/2020-04-29/M4/079.jpg");
-		
-		
-	}
-	
-	90%{
-		background-image:url("../images/Import images/2020-04-29/M4/080.jpg");
-		
-		
-	}
-	
-	
-	100%{
-		background-image:url("../images/Import images/2020-04-29/M4/081.jpg");
-	}
-}
+
 
 
 	
